<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>n3mapping</name>
  <version>1.0.0</version>
  <description>
    N3Mapping: A graph-based backend SLAM system that receives undistorted point clouds 
    and poses from FAST-LIO2 frontend, performs loop closure detection using ScanContext,
    point cloud registration using small_gicp, and graph optimization using GTSAM.
  </description>

  <maintainer email="user@example.com">N3Mapping Developer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS1 依赖 -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>small_gicp</depend>
  <depend>eigen</depend>

  <!-- 外部依赖 -->
  <depend>gtsam</depend>
  <depend>libgtsam-dev</depend>
  <depend>libprotobuf-dev</depend>
  <depend>protobuf-compiler</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>libopencv-dev</depend>

  <!-- 测试依赖 -->
  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>
</package>
