<?xml version="1.0"?>
<package format="2">
  <name>n3mapping_ros1</name>
  <version>0.0.0</version>
  <description>ROS 1 wrapper skeleton for the ROS-independent n3mapping core.</description>

  <maintainer email="todo@example.com">n3mapping maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
